syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

// type : LOGIN,
// packet_type : REQUEST
message LoginRequest { string username = 1; }

// type : LOGIN,
// packet_type : RESPONSE
message LoginResponse { string user_id = 1; }